# cpp-sem1

./: .travis.yml  CMakeLists.txt  README.md
linters/: run.sh
project/Alignment/: alignment.c  alignment.h  test_ali.cpp
project/dynamic/: CMakeLists.txt
project/dynamic/src/: find_max_paral.c  utils.c
project/headers/: find_max.h  finding_max_paral.h  utils.h
project/src/: find_max.c  find_max_paral.c  utils.c
project/static/: CMakeLists.txt
project/static/src/: find_max.c  utils.c
project/tests/: CMakeLists.txt  test.cpp
project/tests/data/: 1.txt  2.txt
